--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -325,10 +325,8 @@ SIGMA_RULE_STATUS_CSV = '/etc/timesketch/sigma_rule_status.csv'
 # WTF_CSRF_ENABLED = False # Set this to False for UI-development purposes
 
 #-------------------------------------------------------------------------------
-# Scenarios
-SCENARIOS_PATH = '/etc/timesketch/scenarios/scenarios.yaml'
-FACETS_PATH = '/etc/timesketch/scenarios/facets.yaml'
-QUESTIONS_PATH = '/etc/timesketch/scenarios/questions.yaml'
+# DFIQ - Digital Forensics Investigation Questions
+DFIQ_PATH = '/etc/timesketch/dfiq/'
 
 # Intelligence tag metadata configuration
 INTELLIGENCE_TAG_METADATA = '/etc/timesketch/intelligence_tag_metadata.yaml'
