--- a/data/features.yaml
+++ b/data/features.yaml
@@ -46,7 +46,7 @@
 # The overwrite_store_as is an optional boolean that determines if
 # we want to overwrite the field store_as if it already exists.
 #
-# The overwrite_and_merge_store_as is an optional boolean that determines 
+# The overwrite_and_merge_store_as is an optional boolean that determines
 # if we want to overwrite the field store_as and merge the existing values.
 #
 # The store_type_list is an optional boolean that determines if we want to
@@ -73,9 +73,9 @@ email_addresses:
 
 gmail_accounts:
         query_string: 'source_short:"WEBHIST" AND url:"mail.google.com"'
-        attribute: 'title'
+        attribute: 'message'
         store_as: 'found_account'
-        re: '.* - (.*?@.*?) - .*?$'
+        re: '[a-zA-Z0-9_\.+\-]+@(gmail|googlemail)\.com'
         re_flags: []
         aggregate: True
         tags: ['gmail-account']
@@ -121,28 +121,28 @@ ssh_client_ipv4_addresses:
         query_string: 'reporter:"sshd"'
         attribute: 'message'
         store_as: 'client_ip'
-        re: '^\[sshd\] \[\d+\]: Connection from ((?:[0-9]{1,3}\.){3}[0-9]{1,3}) 
+        re: '^\[sshd\] \[\d+\]: Connection from ((?:[0-9]{1,3}\.){3}[0-9]{1,3})
           port \d+ on (?:[0-9]{1,3}\.){3}[0-9]{1,3} port \d+(?: rdomain ? .*)?$'
 
 ssh_client_ipv4_addresses_2:
         query_string: 'reporter:"sshd"'
         attribute: 'message'
         store_as: 'client_ip'
-        re: '\[sshd, pid: \d+\] Connection [a-z]+ by 
+        re: '\[sshd, pid: \d+\] Connection [a-z]+ by
           ((?:[0-9]{1,3}\.){3}[0-9]{1,3}) port \d+'
 
 ssh_host_ipv4_addresses:
         query_string: 'reporter:"sshd"'
         attribute: 'message'
         store_as: 'host_ip'
-        re: '^\[sshd\] \[\d+\]: Connection from (?:[0-9]{1,3}\.){3}[0-9]{1,3} 
+        re: '^\[sshd\] \[\d+\]: Connection from (?:[0-9]{1,3}\.){3}[0-9]{1,3}
           port \d+ on ((?:[0-9]{1,3}\.){3}[0-9]{1,3}) port \d+(?: rdomain ? .*)?$'
 
 ssh_client_password_ipv4_addresses:
         query_string: 'reporter:"sshd"'
         attribute: 'message'
         store_as: 'client_ip'
-        re: '^\[sshd, pid: \d+\] (?:Accepted|Failed) (?:password|publickey) for \w+ 
+        re: '^\[sshd, pid: \d+\] (?:Accepted|Failed) (?:password|publickey) for \w+
           from ((?:[0-9]{1,3}\.){3}[0-9]{1,3}) port \d+'
 
 ssh_disconnected_username:
@@ -186,7 +186,7 @@ ssh_failed_method:
         attribute: 'body'
         store_as: 'authentication_method'
         re: '^Failed (?P<authentication_method>[^\s]+) for .*ssh\d'
-        
+
 win_login_subject_username:
         query_string: 'source_name:Microsoft-Windows-Security-Auditing AND (event_identifier:4624 OR event_identifier:4625)'
         attribute: 'xml_string'
@@ -252,7 +252,7 @@ win_login_process_name:
         attribute: 'xml_string'
         store_as: 'process_name'
         re: '.*"ProcessName">(?P<process_name>[^<]+)</Data>'
-        
+
 win_login_ip_address:
         query_string: 'source_name:Microsoft-Windows-Security-Auditing AND (event_identifier:4624 OR event_identifier:4625)'
         attribute: 'xml_string'
