Allow API port to listen on localhost

--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       dockerfile: ./docker/e2e/Dockerfile
       args:
         - PLASO_PPA_TRACK=${PLASO_PPA_TRACK}
+    ports:
+      - "127.0.0.1:80:80"
     links:
       - opensearch
       - postgres
@@ -33,6 +35,9 @@ services:
       - discovery.type=single-node
       - "DISABLE_INSTALL_DEMO_CONFIG=true"
       - "DISABLE_SECURITY_PLUGIN=true" # TODO: Enable when we have migrated the python client to Opensearch as well.
+    # ports:
+    #   - "127.0.0.1:9200:9200"
+    #   - "127.0.0.1:9300:9300"
     ulimits:
       memlock:
         soft: -1
@@ -43,6 +48,8 @@ services:
 
   postgres:
     image: postgres
+    # ports:
+    #   - "127.0.0.1:5432:5432"
     environment:
       - POSTGRES_USER=timesketch
       - POSTGRES_PASSWORD=password
