--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -45,6 +45,8 @@ LABELS_TO_PREVENT_DELETION = ['protected', 'preserved']
 # OpenSearch client. This is expressed in Elastic Time Units, see:
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/\
 # common-options.html#time-units
+# NOTE: If you are running OpenSearch version 1.x with python client version 2.x then
+# you need to set this to seconds as an integer. E.g. 180
 TIMEOUT_FOR_EVENT_IMPORT = '3m'
 
 # Location for the configuration file of the data finder.
