Set correct config value depending on client version

--- a/docker/e2e/docker-compose.yml
+++ b/docker/e2e/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - POSTGRES_PORT=5432
       - OPENSEARCH_HOST=opensearch
       - OPENSEARCH_PORT=9200
+      - OPENSEARCH_TIMEOUT_VALUE=${OPENSEARCH_TIMEOUT_VALUE}
       - REDIS_ADDRESS=redis
       - REDIS_PORT=6379
       - TIMESKETCH_USER=test
