--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -47,7 +47,7 @@ LABELS_TO_PREVENT_DELETION = ['protected', 'preserved']
 # common-options.html#time-units
 # NOTE: If you are running OpenSearch version 1.x with python client version 2.x then
 # you need to set this to seconds as an integer. E.g. 180
-TIMEOUT_FOR_EVENT_IMPORT = '3m'
+TIMEOUT_FOR_EVENT_IMPORT = 180
 
 # Location for the configuration file of the data finder.
 DATA_FINDER_PATH = '/etc/timesketch/data_finder.yaml'
