--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -164,10 +164,13 @@ UPLOAD_FOLDER = '/tmp'
 CELERY_BROKER_URL = 'redis://127.0.0.1:6379'
 CELERY_RESULT_BACKEND = 'redis://127.0.0.1:6379'
 
-# File location to store the mappings used when Elastic indices are created
+# File location to store the mappings used when OpenSearch indices are created
 # for plaso files.
 PLASO_MAPPING_FILE = '/etc/timesketch/plaso.mappings'
 GENERIC_MAPPING_FILE = '/etc/timesketch/generic.mappings'
+
+# Override/extend Plaso default message string formatters.
+PLASO_FORMATTERS = '/etc/timesketch/plaso_formatters.yaml'
 
 # Upper limits for the process memory that psort.py is allocated when ingesting
 # plaso files. The size is in bytes, with the default value of
