--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ altair==4.1.0
 celery==5.2.7
 cryptography==41.0.3
 datasketch==1.5.0
-dfir-unfurl==latest
+dfir-unfurl
 opensearch-py==2.3.1
 Flask==2.3.2
 flask_bcrypt==1.0.1
