clean up a few Sigma left overs

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -114,7 +114,7 @@ GOOGLE_IAP_PUBLIC_KEY_URL = 'https://www.gstatic.com/iap/verify/public_key'
 # Enable Cloud OIDC authentication support.
 # For Google's federated identity, leave AUTH_URI and DICOVERY_URL to None.
 # For others, refer to your OIDC provider configuration. Configuration can be
-# obtain from the dicovery url. eg. https://accounts.google.com/.well-known/openid-configuration
+# obtain from the discovery url. eg. https://accounts.google.com/.well-known/openid-configuration
 
 # Some OIDC providers expects a specific Algorithm. If so, specify in ALGORITHM.
 # Eg. HS256, HS384, HS512, RS256, RS384, RS512.
@@ -316,7 +316,6 @@ EXTERNAL_HOST_URL = 'https://localhost'
 
 SIGMA_CONFIG = '/etc/timesketch/sigma_config.yaml'
 SIGMA_TAG_DELAY = 5
-SIGMA_RULE_STATUS_CSV = '/etc/timesketch/sigma_rule_status.csv'
 
 #-------------------------------------------------------------------------------
 # Flask Settings
