--- a/data/winevt_features.yaml
+++ b/data/winevt_features.yaml
@@ -313,7 +313,7 @@ security_4648_v0:
         - port
 
 # Process Creation
-security_4688_v2:
+security_4688_v0:
   source_name:
     - MIcrosoft-Windows-Security-Auditing
   event_identifier: 4688
@@ -336,7 +336,7 @@ security_4688_v2:
     - name: process_id
       string_index: 6
 
-security_4688_v2:
+security_4688_v1:
   source_name:
     - MIcrosoft-Windows-Security-Auditing
   event_identifier: 4688
@@ -379,8 +379,12 @@ security_4688_v2:
       string_index: 3
     - name: new_process_id
       string_index: 4
+      aliases:
+        - process_id
     - name: new_process_name
       string_index: 5
+      aliases:
+        - process_name
     - name: token_elevation_type
       string_index: 6
     - name: process_id
