--- a/test_tools/test_events/mock_context_links.yaml
+++ b/test_tools/test_events/mock_context_links.yaml
@@ -1,4 +1,4 @@
-# Mock configuration file for testing the contrext links API endpoint!
+# Mock configuration file for testing the context links API endpoint!
 ## Hardcoded Modules
 hardcoded_modules:
   module_one:
