--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ altair==4.1.0
 celery==5.2.7
 cryptography==41.0.4
 datasketch==1.5.0
+dfir-unfurl==20230901
 opensearch-py==2.3.1
 Flask==2.3.2
 flask_bcrypt==1.0.1
