--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -311,6 +311,14 @@ EMAIL_RECIPIENTS = []
 # Configuration to construct URLs for resources.
 EXTERNAL_HOST_URL = 'https://localhost'
 
+# SSL/TLS support for emails
+EMAIL_TLS = False
+EMAIL_SSL = False
+
+# Email support for authentication
+EMAIL_AUTH_USERNAME = ""
+EMAIL_AUTH_PASSWORD = ""
+
 #-------------------------------------------------------------------------------
 # Sigma Settings
 
