Adjust default example text for yeti endpoint

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -254,7 +254,7 @@ SAFEBROWSING_THREATTYPES = ['MALWARE']
 # HASHR_ADD_SOURCE_ATTRIBUTE = True
 
 # Threatintel Yeti analyzer-specific configuration
-# URI root to Yeti's API, e.g. 'https://localhost:8080/api'
+# URI root to Yeti's API, e.g. 'https://localhost:8000/api/v2'
 YETI_API_ROOT = ''
 
 # API key to authenticate requests
